# video_edit

./: CMakeLists.txt  README.md  Slice.cpp  Slice.h  main.cpp
tools/: Slice.cpp  Slice.h  Transcode.cpp  Transcode.h
